# mercury

./: .gitignore  README.md  digest1.txt  requirements.txt  run
.antigravitycli/: a99c5085-b4f3-4502-8fa2-bf766bfabf20.json
src/bringup/bringup/: twist_to_stamped.py
src/bringup/config/: bringup.rviz
src/bringup/launch/: bringup_base.launch.py
src/description/urdf/: robot_base.xacro
src/face_task/: package.xml  setup.cfg  setup.py
src/face_task/face_task/: face_recognition_node.py  face_task_node.py  face_task_trigger_node.py  sim_waypoint_nav_node.py  turret_controller_node.py  turret_gazebo_bridge_node.py
src/face_task/launch/: face_task.launch.py  face_task_sim.launch.py  sim_face_task_test.launch.py
src/perception/: setup.py
src/perception/config/: bev_config.json  road_config.json  sliding_window_config.json
src/perception/launch/: face_task.launch.py  perception.launch.py
src/perception/perception/: lane_bev_carrot_node.py  lane_costmap_node.py  lane_detection.py  pothole_costmap_node.py
src/planning/config/: global_costmap.yaml  nav2_params.yaml  navigate_w_replanning.xml
src/planning/launch/: planning.launch.py
src/simulation/launch/: simulation.launch.py
src/watchdog_monitor/config/: waypoints.yaml
src/watchdog_monitor/launch/: monitoring_all.launch.py  system_monitor.launch.py
src/watchdog_monitor/watchdog_monitor/: system_monitor_node.py  watchdog_node.py  waypoint_detector_node.py
